--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: swift
 osx_image: xcode8
-xcode_project: WebRTCDemo.xcodeproj
+xcode_project: WebRTCDemo/WebRTCDemo.xcodeproj
 xcode_scheme: WebRTCDemo
