added simulator to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: swift
 osx_image: xcode8
 xcode_project: WebRTCDemo/WebRTCDemo.xcodeproj
 xcode_scheme: WebRTCDemo
+xcode_sdk: iphonesimulator10.1
