--- a/WebRTCDemo/WebRTCDemo.xcodeproj/xcshareddata/xcschemes/WebRTCDemo.xcscheme
+++ b/WebRTCDemo/WebRTCDemo.xcodeproj/xcshareddata/xcschemes/WebRTCDemo.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9EBC84449D3326682A7B28161A7F3FE5"
+               BuildableName = "Pods_WebRTCDemo.framework"
+               BlueprintName = "Pods-WebRTCDemo"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "3F63B1691D8332C500E072C0"
                BuildableName = "WebRTCDemo.app"
                BlueprintName = "WebRTCDemo"
