add test scheme

--- a/WebRTCDemo/WebRTCDemo.xcodeproj/xcshareddata/xcschemes/WebRTCDemo.xcscheme
+++ b/WebRTCDemo/WebRTCDemo.xcodeproj/xcshareddata/xcschemes/WebRTCDemo.xcscheme
@@ -40,8 +40,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "73D53F211E1A29CB00B24ED9"
+               BuildableName = "WebRTCDemoTests.xctest"
+               BlueprintName = "WebRTCDemoTests"
+               ReferencedContainer = "container:WebRTCDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
